# solar-system-alarm

./: .gitignore  README.md  docker-compose.yml
android/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/saqib/wapdaalarm/: AlarmActions.kt  AlarmActivity.kt  AlarmForegroundService.kt  AlertCatalog.kt  BootReceiver.kt  MainActivity.kt  OemGuidance.kt  PrefsManager.kt  TokenRegistrar.kt  WapdaFirebaseMessagingService.kt
android/app/src/main/res/drawable/: ic_launcher.xml
android/app/src/main/res/values/: firebase_config.xml  strings.xml  styles.xml
docs/: product-ideas.md
scripts/: deploy_oracle.sh
server/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml
server/src/wapda_alarm/: app.py  config.py  data_alerts.py  fcm.py  health.py  logging_config.py  poller.py  registry.py  shinemonitor_client.py  state.py
server/systemd/: wapda-alarm.service
server/tests/: test_alarm_parser.py  test_data_alerts.py  test_fcm_sender.py
systemd/: solar-system-alarm-deploy.service  solar-system-alarm-deploy.timer
